2011-03-18  Paul Eggert  <eggert@cs.ucla.edu>

	* lisp.h (child_setup): Now NO_RETURN unless DOS_NT.
	This should get cleaned up, so that child_setup has the
	same signature on all platforms.

	* callproc.c (call_process_cleanup): Now static.
	(relocate_fd): Rename locals to avoid shadowing.

2011-03-17  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in ($(BLD)/unexw32.$(O)): Depend on $(SRC)/unexec.h.

2011-03-17  Paul Eggert  <eggert@cs.ucla.edu>

	Fix more problems found by GCC 4.5.2's static checks.

	* process.c (make_serial_process_unwind, send_process_trap):
	(sigchld_handler): Now static.

	* process.c (allocate_pty): Let PTY_ITERATION declare iteration vars.
	That way, the code declares only the vars that it needs.
	* s/aix4-2.h (PTY_ITERATION): Declare iteration vars.
	* s/cygwin.h (PTY_ITERATION): Likewise.
	* s/darwin.h (PTY_ITERATION): Likewise.
	* s/gnu-linux.h (PTY_ITERATION): Likewise.

	* s/irix6-5.h (PTY_OPEN): Declare stb, to loosen coupling.
	* process.c (allocate_pty): Don't declare stb unless it's needed.

	* bytecode.c (MAYBE_GC): Rewrite so as not to use empty "else".
	(CONSTANTLIM): Remove; unused.
	(METER_CODE, Bscan_buffer, Bread_char, Bset_mark):
	Define only if needed.

	* unexelf.c (unexec): Name an expression,
	to avoid gcc -Wbad-function-cast warning.
	Use a different way to cause a compilation error if anyone uses
	n rather than nn, a way that does not involve shadowing.
	(ELF_BSS_SECTION_NAME, OLD_PROGRAM_H): Remove; unused.

	* deps.mk (unexalpha.o): Remove; unused.

	New file unexec.h, the (simple) interface for unexec (Bug#8267).
	* unexec.h: New file.
	* deps.mk (emacs.o, unexaix.o, unexcw.o, unexcoff.o, unexelf.o):
	(unexhp9k800.o, unexmacosx.o, unexsol.o, unexw32.o):
	Depend on unexec.h.
	* emacs.c [!defined CANNOT_DUMP]: Include unexec.h.
	* unexaix.c, unexcoff.c, unexcw.c, unexelf.c, unexhp9k800.c:
	* unexmacosx.c, unexsol.c, unexw32.c: Include unexec.h.
	Change as necessary to match prototype in unexec.h.
